--- a/css/base.scss
+++ b/css/base.scss
@@ -122,6 +122,13 @@ ul.projectsbottom{
 	margin-bottom: 75px;
 }
 
+#news{
+
+  margin-top: 80px;
+  margin-bottom: 50px;
+  max-width: 750px;
+
+}
 
 
 
