--- a/src/public/css/base.scss
+++ b/src/public/css/base.scss
@@ -13,7 +13,7 @@
 
 
 /* HTML resets */
-body, html, div, p, img, h1, h2, h3, h4, h5, h6, ol, ul, li { margin: 0; padding: 0; font-weight: normal; font-size: 100%; outline: none; border: none;}
+body, html, div, p, img, h1, h2, h3, h4, h5, h6, ol, ul, li { margin: 0; padding: 0; font-weight: normal; font-size: 100%; outline: none; border: none; -webkit-font-smoothing: antialiased;}
 
 /* HTML5 block elements */
 header, section, article, footer, aside, nav { margin: 0 auto; display: block; }
@@ -30,14 +30,15 @@ header {
 	border-bottom: 1px dotted #666;
 	width: 750px;
 	background-color: #fff;
-	font-family: "Cutive Mono","Helvetica Neue", Helvetica, arial, sans-serif;
+	font-family: "Open Sans", sans-serif;
 	text-transform: uppercase;
 
 	#logo {
 		margin: 30px 0 10px 0;
 		font-size: 2.4em;
 		a { 
-			color: #000;
+			color: #333;
+            letter-spacing: 1.5px;
 			text-decoration: none;
 		}
 	}
