--- a/src/templates/shared/_footer.liquid
+++ b/src/templates/shared/_footer.liquid
@@ -1,3 +1,3 @@
 <footer>  
-  <p>Built with <a href="http://www.tinytree.info">Bonsai</a>. © Eddie Samuels, {{copyright}} - <a href="mailto:eddiemsamuels@gmail.com">eddiemsamuels@gmail.com</a></p>
+  <p>Built with <a href="http://www.tinytree.info">Bonsai</a> by me</p>
 </footer>
