--- a/resume/typography.css
+++ b/resume/typography.css
@@ -4,8 +4,16 @@ body, aside, .sanserif {
     font-family: 'Open Sans', sans-serif;
 }
 
-#email {
+#email, #linkedin {
     font-size: 12;
+}
+
+.contact {
+    font-size: 14;
+}
+
+.contact i {
+    font-size: 16;
 }
 
 .company {
@@ -18,6 +26,10 @@ body, aside, .sanserif {
 
 .title {
     font-style: italic;
+}
+
+.skills {
+    font-size: 0.9em;
 }
 
 time {
@@ -66,6 +78,7 @@ h5 {
 }
 
 h6 {
+    margin-bottom: 0.3rem;
     font-size: 1.2rem;
     letter-spacing: 1;
     line-height: 1.4;
